Fixed z-index and changed placeholder project
Fixed z-index of clickable-image to ensure navbar stays behind the modal; Removed the placeholder project and added a more "public facing" placeholder instead

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -18,7 +18,7 @@
     flex: 15%;
     display: flex;
     justify-content: center;
-    z-index: 1000;
+    z-index: 999;
 }
 
 .nav-toggle {
